<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purplebackground"
    tools:context=".fragments.MoodFragment">



    <TextView
        android:id="@+id/MoodTitle"
        android:layout_width="342dp"
        android:layout_height="104dp"
        android:fontFamily="@font/poppins_medium"
        android:includeFontPadding="true"

        android:text="@string/how_are_you_feeling"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/textcolor"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/moodsGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.379" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/journalEntry"
        android:layout_width="307dp"
        android:layout_height="226dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rectbox"
        android:fontFamily="@font/itim_font"
        android:hint="@string/how_s_going_today"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/moodComfirmButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/moodsGroup" />

    <RadioGroup
        android:id="@+id/moodsGroup"
        android:layout_width="299dp"
        android:layout_height="74dp"
        android:layout_marginTop="140dp"
        android:layout_marginBottom="80dp"
        android:checkedButton="@id/meh"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/journalEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45">


        <RadioButton
            android:id="@+id/rad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="false"
            android:drawableTop="@drawable/face_laugh_squint_solid"
            android:drawablePadding="3dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/rad"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/good"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/face_smile_solid_1_"
            android:drawablePadding="3dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/good"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/meh"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableTop="@drawable/face_meh_solid"
            android:drawablePadding="3dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/meh"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/sad"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/face_frown_solid"
            android:drawablePadding="3dp"
            android:fontFamily="@font/itim"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/sad"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/awful"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:button="@android:color/transparent"
            android:drawableTop="@drawable/face_grimace_solid"
            android:drawablePadding="3dp"
            android:fontFamily="@font/itim_font"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/awful"
            android:textColor="@color/grey"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RadioGroup>


    <Button
        android:id="@+id/moodComfirmButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/buttoncolor"
        android:text="@string/log_feeling"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/journalEntry" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="414dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginBottom="4dp"
        android:fontFamily="@font/poppins_medium"
        android:gravity="bottom"
        android:text="@string/let_s_write_about_it"
        android:textColor="@color/textcolor"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/journalName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.213"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/date"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/moodsGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/MoodTitle" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/journalName"
        android:layout_width="307dp"
        android:layout_height="39dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rectbox"
        android:fontFamily="@font/itim_font"
        android:hint="@string/journalnamehint"
        android:textColor="@color/black"
        android:textColorHint="@color/grey"
        app:layout_constraintBottom_toTopOf="@+id/journalEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>