...
                the User may find them helpful in overcoming addictions, Feel Good Inc. makes no
                representation or warranty that they are fit for this purpose. The App licensee should not
                delay in obtaining such intervention as a result of usage.\n\n
    </string>
    <!--Nav bar strings-->
    <string name="activities">Activities</string>
    <string name="add_mood">Add mood</string>
    <string name="home">Home</string>
    <string name="resources">Resources</string>
    <string name="account">Account</string>
    <string name="tutorial">Tutorial</string>
    <!--Account page strings-->
    <string name="email_example">exampleuser@feelgood.com</string>
...
    <string name="touch">touch</string>
    <string name="what_do_you_see">What do you see?</string>
    <string name="sight">sight</string>
    <string name="what_do_you_taste">What do you taste?</string>
    <string name="taste">taste</string>
    <!--Mood page strings-->
    <string name="how_are_you_feeling">How are you feeling?</string>
    <string name="how_s_going_today">How\'s going today?</string>
    <string name="rad">Rad</string>
    <string name="good">Good</string>
    <string name="meh">Meh</string>
    <string name="sad">Sad</string>
    <string name="awful">Awful</string>
    <string name="log_feeling">Log feeling</string>
    <string name="let_s_write_about_it">Let\'s write about it</string>
    <string name="date">DATE</string>
    <string name="animal_sounds">Animal Sounds</string>
    <string name="ocean_sounds">Ocean Sounds</string>
    <string name="rainforest_sounds">Rainforest Sounds</string>
    <string name="journalnamehint">Your journal name</string>
...
